--- a/package.json
+++ b/package.json
@@ -4,23 +4,12 @@
   "description": "> Examen DCC janvier 2022",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "laravel-mix": "^6.0.39",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0"
+  "dependencies": {
+    "saas": "^1.0.0",
+    "vite": "^6.0.3"
   }
 }
